--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,9 @@
 include(${CMAKE_SOURCE_DIR}/cmake/pcem_includes.cmake)
 
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+	set(PCEM_DEFINES ${PCEM_DEFINES} SDL2_SHADER_DEBUG SLIRP_DEBUG RECOMPILER_DEBUG NE2000_DEBUG EMU8K_DEBUG_REGISTERS SB_DSP_RECORD_DEBUG MACH64_DEBUG DEBUG_EXTRA DEBUG)
+endif()
+
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wx-ui)
 
 add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/wx-ui/wx-resources.cpp
@@ -396,6 +400,7 @@ set(PCEM_SRC ${PCEM_SRC}
 	wx-ui/wx-createdisc.cc
 	${CMAKE_CURRENT_BINARY_DIR}/wx-ui/wx-resources.cpp
 )
+
 
 if(USE_NETWORKING)
 	set(PCEM_DEFINES ${PCEM_DEFINES} USE_NETWORKING)
