[skip ci] Seperated each debug flag to allow for granularity.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,25 @@ option(USE_ALSA "Build PCem with MIDI output using ALSA" OFF)
 message("ALSA MIDI Support: ${USE_ALSA}")
 
 message("***************************************************************")
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+	option(PCEM_SLIRP_DEBUG "Build PCem with SLIRP_DEBUG debug output" OFF)
+	message("SLIRP_DEBUG debug output: ${PCEM_SLIRP_DEBUG}")
+	option(PCEM_RECOMPILER_DEBUG "Build PCem with RECOMPILER_DEBUG debug output" OFF)
+	message("RECOMPILER_DEBUG debug output: ${PCEM_RECOMPILER_DEBUG}")
+	option(PCEM_NE2000_DEBUG "Build PCem with NE2000_DEBUG debug output" OFF)
+	message("NE2000_DEBUG debug output: ${PCEM_NE2000_DEBUG}")
+	option(PCEM_EMU8K_DEBUG_REGISTERS "Build PCem with EMU8K_DEBUG_REGISTERS debug output" OFF)
+	message("EMU8K_DEBUG_REGISTERS debug output: ${PCEM_EMU8K_DEBUG_REGISTERS}")
+	option(PCEM_SB_DSP_RECORD_DEBUG "Build PCem with SB_DSP_RECORD_DEBUG debug output" OFF)
+	message("SB_DSP_RECORD_DEBUG debug output: ${PCEM_SB_DSP_RECORD_DEBUG}")
+	option(PCEM_MACH64_DEBUG "Build PCem with MACH64_DEBUG debug output" OFF)
+	message("MACH64_DEBUG debug output: ${PCEM_MACH64_DEBUG}")
+	option(USE_ALSA "Build PCem with DEBUG_EXTRA debug output" OFF)
+	message("SLIRP_DEBUG debug output: ${PCEM_SLIRP_DEBUG}")
+	option(PCEM_DEBUG_EXTRA "Build PCem with DEBUG_EXTRA debug output" OFF)
+	message("DEBUG_EXTRA debug output: ${PCEM_DEBUG_EXTRA}")
+    message("***************************************************************")
+endif()
 
 set(OpenGL_GL_PREFERENCE GLVND)
 find_package(SDL2 REQUIRED)
