--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,32 @@
 include(${CMAKE_SOURCE_DIR}/cmake/pcem_includes.cmake)
 
-if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-	set(PCEM_DEFINES ${PCEM_DEFINES} SDL2_SHADER_DEBUG SLIRP_DEBUG RECOMPILER_DEBUG NE2000_DEBUG EMU8K_DEBUG_REGISTERS SB_DSP_RECORD_DEBUG MACH64_DEBUG DEBUG_EXTRA DEBUG)
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+	set(PCEM_DEFINES ${PCEM_DEFINES} DEBUG)
+
+	if(PCEM_SLIRP_DEBUG)
+		set(PCEM_DEFINES ${PCEM_DEFINES} SLIRP_DEBUG)
+	endif()
+	if(PCEM_RECOMPILER_DEBUG)
+		set(PCEM_DEFINES ${PCEM_DEFINES} RECOMPILER_DEBUG)
+	endif()
+	if(PCEM_NE2000_DEBUG)
+		set(PCEM_DEFINES ${PCEM_DEFINES} NE2000_DEBUG)
+	endif()
+	if(PCEM_EMU8K_DEBUG_REGISTERS)
+		set(PCEM_DEFINES ${PCEM_DEFINES} EMU8K_DEBUG_REGISTERS)
+	endif()
+	if(PCEM_SB_DSP_RECORD_DEBUG)
+		set(PCEM_DEFINES ${PCEM_DEFINES} SB_DSP_RECORD_DEBUG)
+	endif()
+	if(PCEM_MACH64_DEBUG)
+		set(PCEM_DEFINES ${PCEM_DEFINES} MACH64_DEBUG)
+	endif()
+	if(PCEM_NE2000_DEBUG)
+		set(PCEM_DEFINES ${PCEM_DEFINES} NE2000_DEBUG)
+	endif()
+	if(PCEM_DEBUG_EXTRA)
+		set(PCEM_DEFINES ${PCEM_DEFINES} DEBUG_EXTRA)
+	endif()
 endif()
 
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wx-ui)
