[skip ci] Fixes Issue #78 and also fixes an issue with CMake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,6 +32,7 @@ endif()
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wx-ui)
 
 add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/wx-ui/wx-resources.cpp
+	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/wx-ui/pc.xrc
 	COMMAND wxrc
 	ARGS -c ${CMAKE_CURRENT_SOURCE_DIR}/wx-ui/pc.xrc -o ${CMAKE_CURRENT_BINARY_DIR}/wx-ui/wx-resources.cpp)
 
