[skip ci] Added correct RELEASE_BUILD define on Release Build pclog also prints to console as well

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 include(${CMAKE_SOURCE_DIR}/cmake/pcem_includes.cmake)
 
-if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
 	set(PCEM_DEFINES ${PCEM_DEFINES} DEBUG)
 
 	if(PCEM_SLIRP_DEBUG)
@@ -27,6 +27,8 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug")
 	if(PCEM_DEBUG_EXTRA)
 		set(PCEM_DEFINES ${PCEM_DEFINES} DEBUG_EXTRA)
 	endif()
+else()
+	set(PCEM_DEFINES ${PCEM_DEFINES} RELEASE_BUILD)
 endif()
 
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wx-ui)
