--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -356,6 +356,13 @@ if(USE_EXPERIMENTAL)
 	if(USE_EXPERIMENTAL_PGC)
 		set(PCEM_DEFINES ${PCEM_DEFINES} USE_EXPERIMENTAL_PGC)
 	endif()
+
+	if(USE_EXPERIMENTAL_PRINTER)
+		set(PCEM_DEFINES ${PCEM_DEFINES} USE_EXPERIMENTAL_PRINTER)
+		set(PCEM_SRC ${PCEM_SRC}
+			lpt/lpt_printer.c
+		)
+	endif()
 endif()
 
 if(${PCEM_CPU_TYPE} STREQUAL "x86_64")
