More Refactoring for Plugin Engine.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ project(PCem)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake/modules)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/includes/private)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/includes/public)
+include(${CMAKE_SOURCE_DIR}/includes/private/private_api.cmake)
+include(${CMAKE_SOURCE_DIR}/includes/public/public_api.cmake)
 
 # TODO: This whole thing is jank, replace with a real way to determine cpu type
 if(WIN32)
