[skip ci] Windows...

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -82,6 +82,7 @@ include(${CMAKE_CURRENT_SOURCE_DIR}/plugin-api/plugin-api.cmake)
 
 if(PLUGIN_ENGINE)
         add_library(pcem-plugin-api SHARED ${PCEM_SRC_PLUGINAPI} ${PCEM_PUBLIC_API})
+        target_link_libraries(pcem-plugin-api ${PCEM_LIBRARIES})
         target_compile_definitions(pcem-plugin-api PUBLIC ${PCEM_DEFINES})
         install(TARGETS pcem-plugin-api RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
         set(PCEM_LIBRARIES ${PCEM_LIBRARIES} pcem-plugin-api)
