--- a/experimental/printer_epsonlx810/CMakeLists.txt
+++ b/experimental/printer_epsonlx810/CMakeLists.txt
@@ -12,5 +12,5 @@ set(EPSON_LX810_SRC
         )
 
 add_library(printer_epsonlx810 SHARED ${EPSON_LX810_SRC} ${EPSON_LX810_HEADER})
-target_link_libraries(printer_epsonlx810 Freetype::Freetype)
+target_link_libraries(printer_epsonlx810 ${PCEM_LIBRARIES} Freetype::Freetype)
 set_target_properties(printer_epsonlx810 PROPERTIES SUFFIX ".pcem")
