Add missing ROM folders for video cards

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -124,6 +124,7 @@ install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/epso
 install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/europc)
 install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/fic_va503p)
 install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/ga686bx)
+install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/gd5430)
 install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/gdc212m)
 install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/genxt)
 install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/gw286ct)
@@ -188,6 +189,9 @@ install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/tand
 install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/tandy1000sl2)
 install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/to16_pc)
 install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/tulip_tc7)
+install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/tvga9000b)
+install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/voodoo3_2000)
+install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/voodoo3_3000)
 install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/vs440fx)
 install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/win486)
 install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/xi8088)
